# aws-security-audit

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  example-custom-profile.yaml  output.md  pyproject.toml  requirements.txt  setup.py
aws_security_audit/: __init__.py  __main__.py  aws_client.py  cli.py  config_manager.py  input_validator.py  security_engine.py
aws_security_audit/checks/: __init__.py  base_checks.py  dynamodb_checks.py  ec2_checks.py  eks_checks.py  elasticache_checks.py  kms_checks.py  load_balancer_checks.py  rds_checks.py  s3_checks.py  security_groups_checks.py  vpc_checks.py
aws_security_audit/reports/: __init__.py  report_generator.py
docs/: aws-security-audit-architecture.md  aws-security-audit-flowchart.md  aws-security-audit-plan.md  aws-security-audit-workflow.md
